Tweak - Fix gallery and social links alignment CSS

--- a/style.css
+++ b/style.css
@@ -1970,6 +1970,16 @@ a#scroll-up:hover {
 	display: none;
 }
 
+/*--------------------------------------------------------------
+Gutenberg Blocks Layout.
+--------------------------------------------------------------*/
+.wp-block-gallery.alignleft, .wp-block-gallery.alignright, .wp-block-gallery.aligncenter,
+.wp-block-social-links.alignleft,
+.wp-block-social-links.alignright,
+.wp-block-social-links.aligncenter {
+	display: flex;
+}
+
 /* WooCommerce CSS
 ----------------------------------------------- */
 
